fixed styling to correct .bottom overflow w/out gradient. changed new-quote style

--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,12 @@ body {
 }
 
 .showcase h2 {
-    padding-top: 40px;
+    padding-top: 25px;
     padding-bottom: 15px;
 }
 
 .showcase p {
-    font-size: 1.25em;
+    font-size: 1.1em;
 }
 
 .btn {
@@ -26,19 +26,24 @@ body {
 }
 
 #author {
-    height: 25vh;
-    padding-top: 40px;
+    height: 20vh;
+    padding-top: 20px;
 }
 
 .bottom {
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .bottom p {
     font-family: 'VT323', monospace;
     font-size: 1.66em;
+}
+
+.bottom .btn {
+    margin: 0;
+    padding: 0;
 }
 
 
